Inicio del proyecto. Se agrega botón para dar play en el video

--- a/index.html
+++ b/index.html
@@ -15,11 +15,26 @@
     </header>
 
     <main class="container">
-        <video src="" class="movie">
-            <source src="./assets/BigBuckBunny.mp4" />
+        <video src="./assets/BigBuckBunny.mp4" class="movie">
         </video>
 
         <button>Play/Pause</button>
     </main>
+
+    <script>
+        const video = document.querySelector("video")
+        const button = document.querySelector("button")
+
+        function MediaPlayer(config) {
+            this.media = config.el
+        }
+
+        MediaPlayer.prototype.play = function() {
+            this.media.play();
+        }
+
+        const player = new MediaPlayer({ el: video })
+        button.onclick = () => player.play();
+    </script>
 </body>
 </html>
