Método para pausar y reporducir video

--- a/index.html
+++ b/index.html
@@ -29,12 +29,16 @@
             this.media = config.el
         }
 
-        MediaPlayer.prototype.play = function() {
-            this.media.play();
+        MediaPlayer.prototype.toggle = function() {
+            if (this.media.paused) {
+                this.media.play();
+            } else {
+                this.media.pause();
+            }
         }
 
         const player = new MediaPlayer({ el: video })
-        button.onclick = () => player.play();
+        button.onclick = () => player.toggle();
     </script>
 </body>
 </html>
