--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <video src="./assets/BigBuckBunny.mp4" class="movie">
         </video>
 
-        <button>Play/Pause</button>
+        <button id="play_pause">Play/Pause</button>
+        <button id="mute_unmute">Mute/Unmute</button>
     </main>
 
     <script type="module" src="/assets/index.js"></script>
